# TaskTracker

./: .gitignore  CMakeLists.txt  Makefile  README.md  allnotesview.cpp  allnotesview.h  authdialog.cpp  authdialog.h  database.cpp  database.h  dayview.cpp  dayview.h  mainwindow.cpp  mainwindow.h  monthview.cpp  monthview.h  noteeditview.cpp  noteeditview.h  notesview.cpp  notesview.h  taskdialog.cpp  taskdialog.h  trackersview.cpp  trackersview.h  weekview.cpp  weekview.h
